# pkg/api/v1/aadhaar_service.pb.gw.go
@@ -117,8 +117,8 @@ func local_request_AadhaarService_VerifyOtpAndGetAadhaar_0(ctx context.Context, 
 
 }
 
-func request_AadhaarService_AutoVerifyCaptcha_0(ctx context.Context, marshaler runtime.Marshaler, client AadhaarServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq AutoVerifyCaptchaRequest
+func request_AadhaarService_VerifyAadhaarNumber_0(ctx context.Context, marshaler runtime.Marshaler, client AadhaarServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq VerifyAadhaarNumberRequest
 	var metadata runtime.ServerMetadata
 
 	newReader, berr := utilities.IOReaderFactory(req.Body)
@@ -129,13 +129,13 @@ func request_AadhaarService_AutoVerifyCaptcha_0(ctx context.Context, marshaler r
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
 	}
 
-	msg, err := client.AutoVerifyCaptcha(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	msg, err := client.VerifyAadhaarNumber(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
 	return msg, metadata, err
 
 }
 
-func local_request_AadhaarService_AutoVerifyCaptcha_0(ctx context.Context, marshaler runtime.Marshaler, server AadhaarServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq AutoVerifyCaptchaRequest
+func local_request_AadhaarService_VerifyAadhaarNumber_0(ctx context.Context, marshaler runtime.Marshaler, server AadhaarServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq VerifyAadhaarNumberRequest
 	var metadata runtime.ServerMetadata
 
 	newReader, berr := utilities.IOReaderFactory(req.Body)
@@ -146,7 +146,7 @@ func local_request_AadhaarService_AutoVerifyCaptcha_0(ctx context.Context, marsh
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
 	}
 
-	msg, err := server.AutoVerifyCaptcha(ctx, &protoReq)
+	msg, err := server.VerifyAadhaarNumber(ctx, &protoReq)
 	return msg, metadata, err
 
 }
@@ -226,18 +226,18 @@ func RegisterAadhaarServiceHandlerServer(ctx context.Context, mux *runtime.Serve
 
 	})
 
-	mux.Handle("POST", pattern_AadhaarService_AutoVerifyCaptcha_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+	mux.Handle("POST", pattern_AadhaarService_VerifyAadhaarNumber_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		var stream runtime.ServerTransportStream
 		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/aadhaarscrapperv1.AadhaarService/AutoVerifyCaptcha", runtime.WithHTTPPathPattern("/api/v1/AutoVerifyCaptcha"))
+		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/aadhaarscrapperv1.AadhaarService/VerifyAadhaarNumber", runtime.WithHTTPPathPattern("/api/v1/VerifyAadhaarNumber"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		resp, md, err := local_request_AadhaarService_AutoVerifyCaptcha_0(rctx, inboundMarshaler, server, req, pathParams)
+		resp, md, err := local_request_AadhaarService_VerifyAadhaarNumber_0(rctx, inboundMarshaler, server, req, pathParams)
 		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
 		ctx = runtime.NewServerMetadataContext(ctx, md)
 		if err != nil {
@@ -245,7 +245,7 @@ func RegisterAadhaarServiceHandlerServer(ctx context.Context, mux *runtime.Serve
 			return
 		}
 
-		forward_AadhaarService_AutoVerifyCaptcha_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+		forward_AadhaarService_VerifyAadhaarNumber_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -350,23 +350,23 @@ func RegisterAadhaarServiceHandlerClient(ctx context.Context, mux *runtime.Serve
 
 	})
 
-	mux.Handle("POST", pattern_AadhaarService_AutoVerifyCaptcha_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+	mux.Handle("POST", pattern_AadhaarService_VerifyAadhaarNumber_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		rctx, err := runtime.AnnotateContext(ctx, mux, req, "/aadhaarscrapperv1.AadhaarService/AutoVerifyCaptcha", runtime.WithHTTPPathPattern("/api/v1/AutoVerifyCaptcha"))
+		rctx, err := runtime.AnnotateContext(ctx, mux, req, "/aadhaarscrapperv1.AadhaarService/VerifyAadhaarNumber", runtime.WithHTTPPathPattern("/api/v1/VerifyAadhaarNumber"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		resp, md, err := request_AadhaarService_AutoVerifyCaptcha_0(rctx, inboundMarshaler, client, req, pathParams)
+		resp, md, err := request_AadhaarService_VerifyAadhaarNumber_0(rctx, inboundMarshaler, client, req, pathParams)
 		ctx = runtime.NewServerMetadataContext(ctx, md)
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
 
-		forward_AadhaarService_AutoVerifyCaptcha_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+		forward_AadhaarService_VerifyAadhaarNumber_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -380,7 +380,7 @@ var (
 
 	pattern_AadhaarService_VerifyOtpAndGetAadhaar_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"api", "v1", "VerifyOtpAndGetAadhaar"}, ""))
 
-	pattern_AadhaarService_AutoVerifyCaptcha_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"api", "v1", "AutoVerifyCaptcha"}, ""))
+	pattern_AadhaarService_VerifyAadhaarNumber_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"api", "v1", "VerifyAadhaarNumber"}, ""))
 )
 
 var (
@@ -390,5 +390,5 @@ var (
 
 	forward_AadhaarService_VerifyOtpAndGetAadhaar_0 = runtime.ForwardResponseMessage
 
-	forward_AadhaarService_AutoVerifyCaptcha_0 = runtime.ForwardResponseMessage
+	forward_AadhaarService_VerifyAadhaarNumber_0 = runtime.ForwardResponseMessage
 )
